--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -127,7 +127,7 @@
     <string name="password_text" context="password label">密碼</string>
     <string name="confirm_password_text" context="label shown in the confirmation of the password when creating an account">確認密碼</string>
     <string name="abc" context="in the password edittext the user can see the password or asterisks. ABC shows the letters of the password">ABC</string>
-    <string name="dots" context="in the password edittext the user can see the password or asterisks. ··· shows asterisks instead of letters">...</string>
+    <string name="dots" context="in the password edittext the user can see the password or asterisks. ··· shows asterisks instead of letters">···</string>
     <string name="new_to_mega" context="This question applies to users that do not have an account on MEGA yet">還沒有MEGA帳號？</string>
     <string name="create_account" context="label and text button when creating the account">建立帳號</string>
     <string name="error_enter_email" context="when the user tries to log in MEGA without typing the email">請輸入您的電子郵件信箱</string>
