--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -20,7 +20,7 @@
     <string name="general_download" context="Item menu option upon right click on one or multiple files.">التنزيل</string>
     <string name="general_add" context="button">إضافة</string>
     <string name="general_empty" context="Button to delete the contents of the trashbin. Can also be translated as &quot;clear&quot;">فارغ</string>
-    <string name="general_loading" context="state previous to import a file">جاري التحميل&#8230;</string>
+    <string name="general_loading" context="state previous to import a file">جاري التحميل</string>
     <string name="general_importing" context="state while importing the file">جاري الاستيراد...</string>
     <string name="general_import" context="Import button. When the user clicks this button the file will be imported to his account.">استيراد</string>
     <string name="general_storage" context="Text listed before the amount of storage a user gets with a certain package. For example: &quot;1TB Storage&quot;.">التخزين</string>
