--- a/res/values-pt-rBR/strings.xml
+++ b/res/values-pt-rBR/strings.xml
@@ -20,8 +20,8 @@
     <string name="general_download" context="Item menu option upon right click on one or multiple files.">Baixar</string>
     <string name="general_add" context="button">Adicionar</string>
     <string name="general_empty" context="Button to delete the contents of the trashbin. Can also be translated as &quot;clear&quot;">Vazio</string>
-    <string name="general_loading" context="state previous to import a file">Carregando&#8230;</string>
-    <string name="general_importing" context="state while importing the file">Importando&#8230;</string>
+    <string name="general_loading" context="state previous to import a file">Carregando</string>
+    <string name="general_importing" context="state while importing the file">Importando</string>
     <string name="general_import" context="Import button. When the user clicks this button the file will be imported to his account.">Importar</string>
     <string name="general_storage" context="Text listed before the amount of storage a user gets with a certain package. For example: &quot;1TB Storage&quot;.">Armazenamento</string>
     <string name="general_bandwidth" context="Text listed before the amount of bandwidth a user gets with a certain package. For example: &quot;8TB Bandwidth&quot;. Can also be translated as data transfer.">Largura de banda</string>
@@ -45,7 +45,7 @@
     <string name="remove_key_confirmation" context="confirmation message before removing the previously downloaded MasterKey file">Você irá deletar a MasterKey exportada</string>  
     <string name="export_key_confirmation" context="confirmation message before downloading to the device the MasterKey file">Alerta de segurança! Esta é uma operação de alto risco. Deseja continuar?</string> 
      
-    <string name="more_options_overflow" context="title of the menu for more options for each file (rename, share, copy, move, etc)">Mais opções&#8230;</string> 
+    <string name="more_options_overflow" context="title of the menu for more options for each file (rename, share, copy, move, etc)">Mais opções</string> 
     <string name="confirmation_remove_contact" context="confirmation message before removing a contact. Do not write question mark">Deseja remover este contato</string>    
     <string name="confirmation_remove_multiple_contacts" context="confirmation message before removing mutiple contacts">Tem certeza que deseja selecionar estes contatos?</string>  
     <string name="confirmation_move_to_rubbish" context="confirmation message before removing a file">Mover para a lixeira?</string>
@@ -58,9 +58,9 @@
     <string name="confirmation_alert" context="confirmation message before removing a file">Confirme por favor</string>
     
     <string name="action_logout" context="Button where the user can sign off or logout">Deslogar</string>
-    <string name="action_add" context="Menu item">Enviar&#8230;</string>
+    <string name="action_add" context="Menu item">Enviar</string>
     <string name="action_create_folder" context="Menu item">Criar nova pasta</string>
-    <string name="action_open_link" context="Menu item">Abrir link&#8230;</string>
+    <string name="action_open_link" context="Menu item">Abrir link</string>
     <string name="action_upload" context="Button text when choosing the destination location in MEGA">Enviar para</string>
     <string name="action_settings" context="Menu item">Configurações</string>
     <string name="action_search" context="Search button">Procurar</string>
@@ -243,7 +243,7 @@
 	<string name="download_failed" context="Error message">Falha no descarregamento</string>
 	<string name="download_downloaded" context="notification message. Example: 1 file downloaded">baixado</string>
 	<string name="download_downloading" context="Title header on the download page while the file is downloading.">Baixando</string>
-	<string name="text_downloading" context="Text located in each fragment when a download is in progress. Keep the … symbol">Transferindo&#8230;</string>
+	<string name="text_downloading" context="Text located in each fragment when a download is in progress. Keep the … symbol">Transferindo</string>
 	<string name="download_preparing_files" context="message before the download or upload start ">Preparando arquivos</string>
     <string name="download_began" context="message when the download starts">Download iniciado</string>
     <string name="download_cancel_downloading" context="Confirmation text when attempting to cancel the download">Você quer cancelar o download?</string>
@@ -265,7 +265,7 @@
     <string name="context_open_link" context="Item menu option upon right click on one or multiple files.">Abrir</string>
     <string name="context_open_link_title" context="Item menu option upon right click on one or multiple files.">Abrir link</string>
     <string name="context_renaming" context="while renaming a file or folder">Renomeando</string>
-    <string name="context_preparing_provider" context="while file provider is downloading a file. Keep the … symbol">Preparando arquivo&#8230;</string>
+    <string name="context_preparing_provider" context="while file provider is downloading a file. Keep the … symbol">Preparando arquivo</string>
     <string name="context_download" context="Item menu option upon right click on one or multiple files.">Baixar</string>
     <string name="download_folder" context="Item menu option upon right click on one or multiple files.">Baixar pasta</string>
     <string name="import_folder" context="Item menu option upon right click on one or multiple files.">Importar pasta</string>
@@ -281,7 +281,7 @@
     <string name="context_delete_from_mega" context="menu item">Deletar do MEGA</string>
     <string name="context_new_folder_name" context="Input field description in the create folder dialog.">Nome da Pasta</string>
     <string name="context_new_contact_name" context="when adding a new contact. in the dialog">E-mail do contato</string>
-    <string name="context_creating_folder" context="status dialog when performing the action. Keep the … symbol">Criando pasta&#8230;</string>
+    <string name="context_creating_folder" context="status dialog when performing the action. Keep the … symbol">Criando pasta</string>
     <string name="context_adding_contact" context="Adding a new relationship (contact)">Adicionando contato</string>
     <string name="context_download_to" context="Menu item">Salvar em</string>
     <string name="context_clear_rubbish" context="Menu option">Limpar lixeira</string>
@@ -361,7 +361,7 @@
     <string name="context_select_one_file" context="option available for just one file">Selecione apenas um arquivo.</string>
     
     <string name="dialog_cancel_subscriptions" context="dialog cancel subscriptions">Você está prestes a cancelar a sua assinatura MEGA. Por favor, deixe-nos saber se há alguma coisa que podemos fazer para ajudá-lo a mudar de idéia.</string>
-    <string name="hint_cancel_subscriptions" context="hint cancel subscriptions dialog.Keep the … symbol">Escreva a resposta aqui &#8230;</string>
+    <string name="hint_cancel_subscriptions" context="hint cancel subscriptions dialog.Keep the … symbol">Escreva a resposta aqui </string>
     <string name="dismiss_cancel_subscriptions" context="dismiss cancel subscriptions dialog">Fechar</string>
     <string name="send_cancel_subscriptions" context="send cancel subscriptions dialog">Enviar</string>
     <string name="title_cancel_subscriptions" context="title cancel subscriptions dialog">cancelar assinatura</string>
@@ -476,7 +476,7 @@
     <string name="settings_advanced_features_offline" context="Settings preference title for offline files">Limpar arquivos offline</string>
     
     <string name="settings_advanced_features_size" context="Size of files in offline or cache folders">Atualmente usando %s</string>    
-    <string name="settings_advanced_features_calculating" context="Calculating Size of files in offline or cache folders">Calculando&#8230;</string>
+    <string name="settings_advanced_features_calculating" context="Calculating Size of files in offline or cache folders">Calculando</string>
     
     <string name="settings_storage_download_location" context="title of the setting to set the default download location">Pasta padrão de downloads</string>
     <string name="settings_storage_ask_me_always" context="Whether to always ask the user each time.">Sempre perguntar o destino do download</string>
