--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -20,8 +20,8 @@
     <string name="general_download" context="Item menu option upon right click on one or multiple files.">Stiahnuť</string>
     <string name="general_add" context="button">Pridať</string>
     <string name="general_empty" context="Button to delete the contents of the trashbin. Can also be translated as &quot;clear&quot;">Vyprázdniť</string>
-    <string name="general_loading" context="state previous to import a file">Načítavanie&#8230;</string>
-    <string name="general_importing" context="state while importing the file">Importujem&#8230;</string>
+    <string name="general_loading" context="state previous to import a file">Načítavanie</string>
+    <string name="general_importing" context="state while importing the file">Importujem</string>
     <string name="general_import" context="Import button. When the user clicks this button the file will be imported to his account.">Importovať</string>
     <string name="general_storage" context="Text listed before the amount of storage a user gets with a certain package. For example: &quot;1TB Storage&quot;.">Úložný priestor</string>
     <string name="general_bandwidth" context="Text listed before the amount of bandwidth a user gets with a certain package. For example: &quot;8TB Bandwidth&quot;. Can also be translated as data transfer.">Dátový prenos</string>
@@ -45,7 +45,7 @@
     <string name="remove_key_confirmation" context="confirmation message before removing the previously downloaded MasterKey file">Chystáte sa odstrániť súbor s hlavným kľúčom</string>  
     <string name="export_key_confirmation" context="confirmation message before downloading to the device the MasterKey file">Bezpečnostné varovanie! Táto operácia je veľmi riskantná. Chcete pokračovať?</string> 
      
-    <string name="more_options_overflow" context="title of the menu for more options for each file (rename, share, copy, move, etc)">Viac možností&#8230;</string> 
+    <string name="more_options_overflow" context="title of the menu for more options for each file (rename, share, copy, move, etc)">Viac možností</string> 
     <string name="confirmation_remove_contact" context="confirmation message before removing a contact. Do not write question mark">Chcete kontakt odstrániť</string>    
     <string name="confirmation_remove_multiple_contacts" context="confirmation message before removing mutiple contacts">Chcete odstrániť tieto kontakty?</string>  
     <string name="confirmation_move_to_rubbish" context="confirmation message before removing a file">Presunúť do Koša?</string>
@@ -58,7 +58,7 @@
     <string name="confirmation_alert" context="confirmation message before removing a file">Prosím potvrďte</string>
     
     <string name="action_logout" context="Button where the user can sign off or logout">Odhlásiť</string>
-    <string name="action_add" context="Menu item">Upload&#8230;</string>
+    <string name="action_add" context="Menu item">Upload</string>
     <string name="action_create_folder" context="Menu item">Vytvoriť nový priečinok</string>
     <string name="action_open_link" context="Menu item">Otvoriť odkaz...</string>
     <string name="action_upload" context="Button text when choosing the destination location in MEGA">Nahrať do</string>
@@ -134,7 +134,7 @@
     <string name="password_text" context="password label">heslo</string>
     <string name="confirm_password_text" context="label shown in the confirmation of the password when creating an account">Potvrďte heslo</string>
     <string name="abc" context="in the password edittext the user can see the password or asterisks. ABC shows the letters of the password">ABC</string>
-    <string name="dots" context="in the password edittext the user can see the password or asterisks. ··· shows asterisks instead of letters">...</string>
+    <string name="dots" context="in the password edittext the user can see the password or asterisks. ··· shows asterisks instead of letters">···</string>
     <string name="new_to_mega" context="This question applies to users that do not have an account on MEGA yet">Nováčik v MEGA?</string>
     <string name="create_account" context="label and text button when creating the account">Vytvorte si účet</string>
     <string name="error_enter_email" context="when the user tries to log in MEGA without typing the email">Prosím zadajte svoju emailovú adresu</string>
@@ -289,7 +289,7 @@
     <string name="context_delete_from_mega" context="menu item">Zmazať z MEGA</string>
     <string name="context_new_folder_name" context="Input field description in the create folder dialog.">Názov priečinku</string>
     <string name="context_new_contact_name" context="when adding a new contact. in the dialog">Kontaktý email</string>
-    <string name="context_creating_folder" context="status dialog when performing the action. Keep the … symbol">Vytváranie priečinku&#8230;</string>
+    <string name="context_creating_folder" context="status dialog when performing the action. Keep the … symbol">Vytváranie priečinku</string>
     <string name="context_adding_contact" context="Adding a new relationship (contact)">Pridávanie kontaktu</string>
     <string name="context_download_to" context="Menu item">Uložiť do</string>
     <string name="context_clear_rubbish" context="Menu option title">Vyprázdniť kôš</string>
